# RL-Army-of-Agents

./: .env.example  README.md  TODO.md  app.js  index.html  pyproject.toml
.githooks/: commit-msg
Google-ADK-agents/: .env.example  .gitattributes  .gitignore  DOCKER_K8S_PLAN.md  Energy-Drilling-agent.py  README.md  SEMANTIC_RECALL_TODO.md  SHOWCASE.md  TIGER_INSPECT.md  TIGER_STREAMING_SQL.md  netflow-acquisition.md  oilprice_futures.py  pyproject.toml  resumefromdb.md  run_valuation.py  seed_commodities.py  seed_insider_trades.py  seed_marine_ports.py  seed_timescale_prices.py
Google-ADK-agents/a2a_finance/: README.md  __init__.py  commodities_service.py  coordinator.py  embeddings.py  fundamentals_service.py  observability.py  recall_tools.py  research.py  risk_service.py  run_demo.py  storage.py  tiger_client.py  valuation_service.py
Google-ADK-agents/commodities_agent/: FUSE_ENERGY_WATCHLIST.md  OILPRICE_API.md  README.md  __init__.py  agent.py  run.py  tools.py
Google-ADK-agents/energy_drilling_agent/: __init__.py  agent.py  run.py  tools.py
Google-ADK-agents/finance_coordinator/: __init__.py  agent.py  config.py  schema.py
Google-ADK-agents/finance_coordinator/models/: __init__.py  openrouter_llm.py
Google-ADK-agents/finance_coordinator/sub_agents/: __init__.py  fundamentals_agent.py  note_formatter.py  risk_agent.py  valuation_agent.py
Google-ADK-agents/finance_coordinator/tools/: __init__.py  fmp_client.py  market_tools.py
Google-ADK-agents/report_pipeline/: __init__.py  agent.py  steps.py
Google-ADK-agents/scripts/: backfill_embeddings.py  insider_cron.sh  marine_cron.sh  seed_cron.sh
Google-ADK-agents/tests/: test_futures.py  test_graceful.py
advancedRL/: IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
advancedRL/configs/environments/: repo_bugfix.yaml
advancedRL/configs/models/: qwen3-4b-base.yaml
advancedRL/configs/rewards/: default.yaml
advancedRL/configs/training/: grpo_baseline.yaml
advancedRL/docs/: ARCHITECTURE.md
advancedRL/integrations/sglang/: pyproject.toml
advancedRL/integrations/slime/: pyproject.toml
advancedRL/scripts/: launch_grpo_qwen3_4b.sh
advancedRL/tests/fixtures/buggy_calculator/: calculator.py  test_calculator.py
advancedRL/tests/integration/: test_docker_sandbox.py
advancedRL/tests/reward_correctness/: test_reward_composition.py
advancedRL/tests/trajectory_correctness/: test_agentic_rollout_smoke.py  test_loss_mask.py  test_sample_conversion.py
advancedRL/tests/unit/: test_budget.py  test_config.py  test_episode_and_verifier.py  test_sandbox_tools.py  test_schemas.py  test_sglang_client.py
app/: api.py
autonomous-coding-agent-harness/: .dockerignore  .env.example  CODEX.md  Dockerfile  MEMO.md  Makefile  README.md  SPEC.md  pyproject.toml  requirements.txt
autonomous-coding-agent-harness/evals/e2e/: __init__.py  eval_fixture_task.py
autonomous-coding-agent-harness/evals/retrieval/: __init__.py  eval_recall.py  labeled_pairs.py
autonomous-coding-agent-harness/fixture_repo/: app.py  calculator.py  conftest.py  test_calculator.py
autonomous-coding-agent-harness/src/agent/: __init__.py  chat_model.py  logging_config.py  main.py
autonomous-coding-agent-harness/src/agent/graph/: graph.py  nodes.py  state.py
autonomous-coding-agent-harness/src/agent/mcp_client/: client.py
autonomous-coding-agent-harness/src/agent/models/: deps.py  fs.py  git.py  tool_io.py
autonomous-coding-agent-harness/src/agent/resilience/: __init__.py
autonomous-coding-agent-harness/src/agent/retrieval/: __init__.py  embedder.py  registry.py  retriever.py  store.py
autonomous-coding-agent-harness/src/agent/servers/: __init__.py  ci_server.py  fs_server.py  git_server.py
autonomous-coding-agent-harness/src/agent/subagent/: __init__.py  runner.py  tool.py
autonomous-coding-agent-harness/tests/integration/: test_long_horizon_config.py  test_mcp_discovery.py
autonomous-coding-agent-harness/tests/unit/: test_chat_model.py  test_context_manager.py  test_fs_models.py  test_git_models.py  test_pgvector_store.py  test_registry.py  test_retry.py  test_subagent_isolation.py
langchain-deep-agents/: .env.example  README.md  graph_builder.py  main.py  models.py  pyproject.toml  requirements.txt  scraper.py  storage.py
langchain-deep-agents/.githooks/: commit-msg
langchain-deep-agents/app/: __init__.py  main.py
langchain-deep-agents/app/agents/: __init__.py  code_agent.py  deep_agent.py  main_agent.py  research_agent.py
langchain-deep-agents/app/config/: __init__.py  settings.py
langchain-deep-agents/app/mcp/: client_factory.py
langchain-deep-agents/app/observability/: __init__.py
langchain-deep-agents/app/services/: __init__.py  agent_orchestrator.py
langchain-deep-agents/app/tools/: __init__.py  etf_graph_schema.py  graph_database_server.py  neo4j_graph_tools.py  subagent_tools.py
langchain-deep-agents/autonomous-coding-agent-harness/: .gitignore  CLAUDE.md  MEMO.md  README.md  requirements.txt
langchain-deep-agents/autonomous-coding-agent-harness/evals/retrieval/: labeled_pairs.py
langchain-deep-agents/autonomous-coding-agent-harness/src/agent/: chat_model.py  errors.py  main.py
langchain-deep-agents/autonomous-coding-agent-harness/tests/integration/: test_subagent_tool.py
langchain-deep-agents/docs/: etfcompanies.txt  etfdb_market_cap_content.md  tavily_extract_skill.md
langchain-deep-agents/examples/: crawl_etfdb_market_cap.py
langchain-deep-agents/langchain-deep-agents/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
langchain-deep-agents/langchain-deep-agents/app/: main.py
langchain-deep-agents/langchain-deep-agents/docs/: tavily_extract_skill.md
langchain-deep-agents/langchain-deep-agents/examples/: run_codebase_task.py  run_database_task.py  run_research_task.py
langchain-deep-agents/langchain-deep-agents/tests/: test_agent_orchestrator.py  test_config.py  test_mcp_config.py  test_neo4j_graph_tools.py
langchain-deep-agents/tests/: test_agent_orchestrator.py  test_config.py  test_mcp_config.py  test_subagent_tools.py  test_tavily_tools.py
(+124 files in other folders)
