[project]
name = "google-adk-agents"
version = "0.1.0"
description = "Multi-agent financial research orchestrator built on Google's Agent Development Kit (ADK)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.4,<0.4",
    "google-adk>=2.3.0",
    "httpx>=0.28.1",
    "litellm>=1.91.0",
    "openrouter>=0.11.6",
    "psycopg[binary]>=3.2.0",
    "sse-starlette>=3.4.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finance_coordinator", "report_pipeline", "a2a_finance", "commodities_agent"]
