[project]
name = "google-adk-agents"
version = "0.1.0"
description = "Multi-agent financial research orchestrator built on Google's Agent Development Kit (ADK)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.4,<0.4",
    "google-adk>=2.3.0",
    "httpx>=0.28.1",
    "litellm>=1.91.0",
    "openrouter>=0.11.6",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=3.4.5",
]

[project.optional-dependencies]
# Semantic recall via local embeddings. Heavy — opt in explicitly:
#   uv sync --extra recall
# torch is listed directly so the CPU-index source pin below actually binds
# (a source pin doesn't apply to a purely transitive dep).
recall = ["sentence-transformers>=3.0.0", "torch>=2.2.0"]
# TimescaleDB (Tiger Cloud) price persistence — psycopg direct Postgres driver.
timescale = ["psycopg[binary]>=3.2.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

# Pin torch to the CPU wheel index so `uv sync --extra recall` doesn't pull the
# multi-GB CUDA build (zero-budget / CPU-only embeddings).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finance_coordinator", "report_pipeline", "a2a_finance", "commodities_agent"]
