[project]
name = "trajectoryos-workspace"
version = "0.1.0"
description = "TrajectoryOS development workspace (not published)"
requires-python = ">=3.11"
dependencies = [
    "trajectoryos-schemas",
    "trajectoryos-core",
    "trajectoryos-rewards",
    "trajectoryos-environments",
    "trajectoryos-verifiers",
    "trajectoryos-agents",
    "trajectoryos-sglang",
    "trajectoryos-slime",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.11",
    "ruff>=0.6",
    "types-PyYAML>=6.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
# List members explicitly: packages/ also holds not-yet-implemented milestone dirs
# (.gitkeep only), which a glob would reject for lacking a pyproject.toml.
members = [
    "packages/schemas",
    "packages/core",
    "packages/rewards",
    "packages/environments",
    "packages/verifiers",
    "packages/agents",
    "integrations/sglang",
    "integrations/slime",
]

[tool.uv.sources]
trajectoryos-schemas = { workspace = true }
trajectoryos-core = { workspace = true }
trajectoryos-rewards = { workspace = true }
trajectoryos-environments = { workspace = true }
trajectoryos-verifiers = { workspace = true }
trajectoryos-agents = { workspace = true }
trajectoryos-sglang = { workspace = true }
trajectoryos-slime = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
# tests/fixtures holds task repositories for sandboxes, not test suites.
addopts = "-q --ignore=tests/fixtures"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "packages/schemas/src,packages/core/src,packages/rewards/src,packages/environments/src,packages/verifiers/src,packages/agents/src,integrations/sglang/src,integrations/slime/src"
plugins = ["pydantic.mypy"]
exclude = ["tests/fixtures/"]

[[tool.mypy.overrides]]
# Optional backends that exist only in specialized environments:
# numpy/torch (GPU training), slime (RL cluster), transformers (tokenizers).
module = ["numpy", "torch", "slime.*", "transformers"]
ignore_missing_imports = true
