[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autonomous-coding-agent-harness"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-groq>=0.2",
    "langchain-mcp-adapters>=0.1",
    "langchain-postgres>=0.0.14",
    "mcp>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "sentence-transformers>=2.7",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit>=1.7",
    "pre-commit>=3.7",
    "pip-audit>=2.7",
]

[project.scripts]
agent = "agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that require installed runtime dependencies or external services",
]
