[project]
name = "trajectoryos-sglang"
version = "0.1.0"
description = "SGLang inference adapter: token-in/token-out generation preserving sampled token IDs and logprobs"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "trajectoryos-schemas",
    "trajectoryos-agents",
]

[tool.uv.sources]
trajectoryos-schemas = { workspace = true }
trajectoryos-agents = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trajectoryos"]
