[project]
name = "trajectoryos-slime"
version = "0.1.0"
description = "slime integration: trajectory-to-Sample conversion and custom generate/reward entry points"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "trajectoryos-schemas",
    "trajectoryos-rewards",
    "trajectoryos-agents",
    "trajectoryos-environments",
    "trajectoryos-verifiers",
    "trajectoryos-sglang",
]

[tool.uv.sources]
trajectoryos-schemas = { workspace = true }
trajectoryos-rewards = { workspace = true }
trajectoryos-agents = { workspace = true }
trajectoryos-environments = { workspace = true }
trajectoryos-verifiers = { workspace = true }
trajectoryos-sglang = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trajectoryos"]
